增了gc例子的的启动参数和两个例子